--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@heroui/theme": "2.4.17",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
+    "@sendgrid/mail": "^8.1.5",
     "@stripe/stripe-js": "^7.3.1",
     "@supabase/supabase-js": "^2.50.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
@@ -33,6 +35,7 @@
     "jspdf": "^3.0.1",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "nodemailer": "^7.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "stripe": "^18.2.1"
