--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
+    "form-data": "^4.0.4",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "jspdf": "^3.0.1",
@@ -41,6 +42,7 @@
     "nodemailer": "^7.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sharp": "^0.34.3",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
