--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.0.1",
     "form-data": "^4.0.4",
     "framer-motion": "11.13.1",
+    "heic2any": "^0.0.4",
     "intl-messageformat": "10.7.16",
     "jspdf": "^3.0.1",
     "next": "15.3.1",
