--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,18 +23,18 @@
       "type": "image/png"
     },
     {
-      "src": "/favicon-48x48.png",
-      "sizes": "48x48",
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "/mcs-logo.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/mcs-logo.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -42,9 +42,9 @@
   ],
   "screenshots": [
     {
-      "src": "/og-image.png",
+      "src": "/fix_my_leak_logo.jpg",
       "sizes": "1200x630",
-      "type": "image/png",
+      "type": "image/jpeg",
       "form_factor": "wide"
     }
   ],
