--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "heic2any": "^0.0.4",
     "intl-messageformat": "10.7.16",
     "jspdf": "^3.0.1",
-    "next": "15.3.8",
+    "next": "^16.1.6",
     "next-themes": "0.4.6",
     "nodemailer": "^7.0.4",
     "react": "18.3.1",
@@ -50,7 +50,7 @@
     "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
-    "@next/eslint-plugin-next": "15.3.1",
+    "@next/eslint-plugin-next": "^16.1.6",
     "@react-types/shared": "3.30.0",
     "@types/node": "22.15.3",
     "@types/react": "18.3.3",
@@ -59,7 +59,7 @@
     "@typescript-eslint/parser": "8.31.1",
     "autoprefixer": "10.4.21",
     "eslint": "9.25.1",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^16.1.6",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
